# claude_workshop

./: .env.example  .gitignore  .gitleaksignore  .mise.toml  AGENTS.md  README.md  REVIEW.md  VIBE_CHECK.md  lefthook.yml  pyproject.toml  skills-lock.json  vibe-check-report.html
.agents/skills/bootstrap-project/: SKILL.md
content/: context.md  design.md  project.md
scripts/: danger_check.py  review.py
src/paperclaw/: __main__.py  categories.yaml  cli.py  mcp_server.py
src/paperclaw/agent/: answer.py  anthropic_backend.py  backend.py
src/paperclaw/ingest/: classify.py  extract.py  pipeline.py
src/paperclaw/store/: index.py  library.py
tests/: test_answer.py  test_classify.py  test_extract.py  test_index.py  test_library.py  test_pipeline.py  test_smoke.py
