[project]
name = "paperclaw"
version = "0.0.0"
description = "Turn an inbox of paperwork into a searchable document library."
requires-python = ">=3.14"
readme = "README.md"
dependencies = [
  "anthropic>=0.50",
  "httpx>=0.28",
  "pydantic>=2.10",
  "pypdf>=5",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
  "typer>=0.15",
]

[project.optional-dependencies]
ocr = [
  "pdf2image>=1.17",
  "Pillow>=11",
  "pytesseract>=0.3",
]

[project.scripts]
paperclaw = "paperclaw.__main__:main"

[dependency-groups]
dev = [
  "deptry>=0.21",
  "mypy>=1.13",
  "pytest>=8.3",
  "ruff>=0.8",
  "types-PyYAML>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/paperclaw"]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E", "W",   # pycodestyle
  "F",        # pyflakes (unused imports/vars)
  "I",        # isort
  "B",        # bugbear
  "UP",       # pyupgrade
  "SIM",      # simplify
  "RUF",      # ruff-specific
  "TID",      # tidy imports
  "PL",       # pylint subset
  "PTH",      # use pathlib
  "ARG",      # unused arguments
  "ERA",      # commented-out code
]
ignore = ["PLR2004"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "ARG"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_explicit = true
files = ["src", "tests"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "paperclaw.ingest.classify"
disallow_any_explicit = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.deptry]
known_first_party = ["paperclaw"]
# httpx: part of the stated stack (AGENTS.md) for future HTTP calls; Pillow: transitive via pdf2image
per_rule_ignores = {DEP002 = ["httpx", "Pillow"]}
